--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Eric Bragas</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='gallery.css') }}">
+    <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"> -->
   </head>
 
   <body>
